[package]
name = "atarashii_imap"
version = "0.1.0"
authors = ["Alex Maslakov <me@gildedhonour.com>"]
repository = "https://github.com/GildedHonour/atarashii_imap"
description = "IMAP client for Rust"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
openssl = "0.7.10"
regex = "0.1.69"

[lib]
name = "atarashii_imap"
path = "src/lib.rs"

[[bin]]
name = "atarashii_imap"
path = "src/app.rs"
